# jupyterlab-cursor-theme

./: .copier-answers.yml  .gitignore  .prettierignore  CHANGELOG.md  README.md  RELEASE.md  install.json  lerna.json  package.json  pyproject.toml  tsconfigbase.json
.github/workflows/: build.yml  check-release.yml  deploy.yml
demo/: pyproject.toml
jupyterlab_cursor_theme/: __init__.py
scripts/: sync_version.py
src/: index.ts  palettes.ts
style/: index.css  variables.css
