[project]
name = "demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.5.0b1",
    "jupyterlab-cursor-theme",
    "jupyterlite-core>=0.7.0b0",
    "jupyterlite-pyodide-kernel>=0.7.0b0",
]

[tool.uv.sources]
jupyterlab-cursor-theme = { path = "../", editable = true }
